methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:5: error: ambiguous reference to overloaded definition,
both method forward in class MethodsReturning of type (i: Int)Unit
and  method forward in class AbstractBuggle of type ()Unit
match expected type ?
      forward
      ^MethodsReturning:7: error: not found: value isOVerBaggle
    if (isOVerBaggle() == true) {
        ^MethodsReturning:8: error: not found: value seenbaggle
      (return seenbaggle = true)
              ^MethodsReturning:3: error: type mismatch;
 found   : Unit
 required: Boolean
  for (stepper <- 1 to 6) {
               ^